work2 add datavolume

--- a/flask-server/Dockerfile
+++ b/flask-server/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.6
 WORKDIR /app
-ADD . /app
+COPY . /app
 RUN pip install -U pip
 RUN pip config set global.index-url http://mirrors.aliyun.com/pypi/simple
 RUN pip config set install.trusted-host mirrors.aliyun.com
 RUN pip install -r requirements.txt
 ENV NAME World
-CMD ["python3","server.py"]
+ENTRYPOINT ["python3","server.py"]
